--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Miss+Lavanda&display=swap');
 
 :root{
     --main-color:#d47378;
@@ -11,7 +12,7 @@
 
 
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Miss Lavanda', cursive;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -241,6 +242,13 @@ section{
     
 }
 
+@media (max-width: 600px) {
+    .menu .menu-sorting-btns{
+        overflow-y: auto;
+        max-height: 200px;   
+    }
+  }
+
 @media(max-width:768px){
     .about .row img,
     .about .row .image {
@@ -417,12 +425,7 @@ section{
     height: 10rem;
  }
 
- .menu .menu-sorting-btns {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    padding: 1rem 0;
-}
+
 
 .menu .menu-sorting-btns .sorting-btn {
     font-family: 'Pacifico', cursive;
@@ -435,6 +438,9 @@ section{
     cursor: pointer;
     transition: background 0.3s;
     text-shadow: 1px 2px 0px #000000;
+    margin-right: 1rem;  
+    margin-bottom: 1rem;  
+    
 }
 
 .menu .menu-sorting-btns .sorting-btn:hover {
@@ -462,6 +468,33 @@ section{
  .menu .box-container .box:hover{
     background: var(--main-color);
  }
+
+ .menu .box-container{
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth; /* плавная прокрутка */
+}
+
+
+.menu .box-container::-webkit-scrollbar {
+    width: 1em;
+}
+
+.menu .box-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px; /* для скругления краев полосы прокрутки */
+}
+
+.menu .box-container::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    transition: background-color 0.3s ease-in-out; /* переход цвета ползунка */
+    border-radius: 10px; /* для скругления краев ползунка */
+}
+
+.menu .box-container::-webkit-scrollbar-thumb:hover {
+    background-color: slategrey; /* изменение цвета ползунка при наведении */
+}
 
  .menu .box-container .box:hover > *{
     color: var(--black);
@@ -550,7 +583,6 @@ section{
     font-size: 1.6rem;
     line-height: 1.8;
     color: #ccc;
-    padding: 2rem 0;
     background: var(--color-credit);
  }
  .review .box-container .box i{
@@ -575,6 +607,10 @@ section{
     font-size: 1.5rem;
     color: yellow;
  }
+ 
+ .review .box-container .box p {
+    text-transform: none;
+}
 
  /*contact*/
 
@@ -809,3 +845,36 @@ section{
 #editSubmit:hover {
     background-color: #45a049;
 }
+
+
+/* Extra styles for the select boxes */
+select.form-control{
+    /* Modify according to your color scheme */
+    color: #fff;
+    background-color: var(--color-credit);
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1.6rem;
+    /* Style the dropdown icon, common across browsers */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-repeat: no-repeat;
+    background-position-x: 95%;
+    background-position-y: 50%;
+    /* Use this to add a dropdown arrow */
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAMCAYAAABSgIzaAAAAAXNSR0IArs4c6QAAAGpJREFUOE9jYBgFo2AUjIJRMAg1sKnwGmu77B8YXn8NA5B6MDAwWPoPM10Dw2sYmeVmZnH1xesYBkZGmEN3u9z9cb1tN6Cx8TUTFIb2QyaitMyDv2ldz8fLJQ6gfDEYDQxGA6KZmRliFhYGGAZmDHQAAuIH+kXpOdEAAAAASUVORK5CYII=);
+}
+
+/* Change the color of the dropdown icon */
+select.form-control::-ms-expand {
+    color: #fff;
+    background-color: var(--color-credit);
+}
+
+
+#msg{
+    color:#61b752;
+    margin-top: 10px;
+    display: block;
+}   
